--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
-name: Bug report
-description: Report a bug. For security vulnerabilities see Report a security vulnerability in the templates.
-title: "BUG: <Please write a comprehensive title after the 'BUG: ' prefix>"
-labels: [00 - Bug]
+name: Bug Report
+description: Report an issue or a bug.
+title: "< Please write a comprehensive title. >"
+labels: [Defect]
 
 body:
   - type: markdown
