--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -11,7 +11,7 @@ body:
 
   - type: textarea
     attributes:
-      label: "Feature Description"
+      label: "Description"
       description: >
         Please describe the new feature in a few short sentences.
     validations:
