--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Suggest a new feature to add to Colour.
+description: Suggest a new feature to implement.
 title: "[FEATURE]: << Please use a comprehensive title... >>"
 labels: [Feature]
 
