--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -6,9 +6,10 @@ labels: [Discussion]
 body:
   - type: markdown
     attributes:
-      value: Thank you for taking the time to ask a question or discuss. Before continuing, we would be glad if you were to start a discussion in the dedicated [discussions](https://github.com/colour-science/colour/discussions) section.
+      value: Thank you for taking the time to ask a question or discuss. Before continuing, we would be glad if you were to start a discussion in the dedicated [discussions](https://github.com/colour-science/colour/discussions) area.
 
   - type: textarea
     attributes:
       label: "Question"
-      description: If you are still here, please consider using the dedicated [discussions](https://github.com/colour-science/colour/discussions) section.
+      description: If you are still here, please consider using the dedicated [discussions](https://github.com/colour-science/colour/discussions) area.
+      placeholder: << The discussions area is this way: https://github.com/colour-science/colour/discussions...  >>
