--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -6,7 +6,7 @@ labels: [Discussion]
 body:
   - type: markdown
     attributes:
-      value: Thank you for taking the time to ask a question or discuss. Before continuing, we would be glad if you were to start a discussion in the dedicated [discussions](https://github.com/colour-science/colour/discussions) area.
+      value: Thank you for taking the time to ask a question or discuss. Before continuing, we would be glad if you were to start this discussion in the dedicated [discussions](https://github.com/colour-science/colour/discussions) area.
 
   - type: textarea
     attributes:
